2004-09-09  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m (-[XPbOwner getSelectionData:type:], -[XPbOwner
	xProvideSelection:]): Removed some compiler warnings.
	* Source/cairo/CairoGState.m (-DPSimage:...:): Slightly improved.
	(-compositeGState:fromRect:toPoint:op:fraction:) New method 
	(-compositeGState:fromRect:toPoint:op:,
	-dissolveGState:fromRect:toPoint:delta:) Implemented via new method.
	Added all missing colour conversions.
	(GSShowGlyphs::) Use new method on CairoFontInfo.
	* Header/cairo/CairoFontInfo.h (-drawGlyphs:length:on:atX:y:) New method.
	* Source/cairo/CairoFontInfo.m (-drawGlyphs:length:on:atX:y:) New method.
	Moved some includes from header to here, extracted method
	[setupAttributes] and other cleanup. 
	
2004-09-08  Adam Fedor  <fedor@gnu.org>

	* Headers/x11/XGServer.h: Add 8bit fast drawing.	
	* Source/x11/XGServer.m ([XGScreenContext
	-initForDisplay:screen:]): For 8bit, test for RGB_BEST_MAP.
	* Source/xlib/XGBitmap.m (_pixmap_combine_alpha, 
	_bitmap_combine_alpha, _pixmap_read_alpha): Add 8 bit case.
	(patch from Paul Secchia <paul@worldnet.att.net>).

	* Documentation/Back/DefaultsSummary.gsdoc: Document it.

	* Documentation/news.texi: Update for new release.

2004-09-05 00:05  Alexander Malmberg <alexander@malmberg.org>

	* Tools/GNUmakefile.preamble: Compile with -Wall.
	* Tools/xpbs.m: Rename to +initializePasteboard. Return NO iff
	XOpenDisplay fails.
	* Tools/win32pbs.m (+initialize): Rename to +initializePasteboard.
	Return YES.
	* Tools/gpbs.m ([PasteboardServer -init]): Call	+initializePasteboard
	instead of +class. Set xPbClass to nil if the call fails.

2004-09-01  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Prepend don't overwrite CFLAGS and LDFLAGS given
	in environment.

2004-08-31  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/x11/XGServerEvent.m: Changed mapping of GNUstep modifier
	keys to X11 KeySyms instead of KeyCodes.  (Added check_key(); updated